--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <html>
         <head>
-            <title>Study | Base</title>
-            <link rel="icon" type="image/png" href="https://ibb.co/YjFB4pM"/>
+            <title>Mentor.Connect : Your Journey to Success </title>
+            <link rel="icon" type="image/png" href="study-base.png"/>
             <link href="style.css" rel="stylesheet"/>
             
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -10,9 +10,12 @@
             
         </head>
         <body>
+                                <!--NAV BAR-->        
             <nav class="navbar navbar-expand-sm navbar-light" id="neubar">
                 <div class="container">
-                  <a class="navbar-brand" href="#"><p style="position: absolute; margin-top: -15px;">Study | Brand </p></a>
+                  <a class="navbar-brand" href="#">
+                    <p>Mentor.Connect </p>
+                  </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -42,12 +45,25 @@
                   </div>
                 </div>
               </nav>
-              <div class="nav-backgorund">
-
-              </div>
-              <div id="demo1">
-
-              </div>
+                       <!-- Nav Left Div-->
+              <div class="upper-main">
+                <div class="row">
+                  <div class="col-8">
+                    <h1 id="main-head">
+                      Mentor.Connect: Your Journey to Success !
+                    </h1>
+                    <p id="sub-head">
+                      Unlock Your Potential with a Personal Mentor...
+                    </p>
+                  </div>
+                       <!-- Nav Right Div-->  
+                  <div class="col-4" id="main-pic">
+                    <figure class="figure">
+                      <img src="..." class="figure-img img-fluid rounded" alt="image">
+                      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>         
         </body>
-
 </html>
